--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             Bu gizlilik politikası hakkında sorularınız varsa, lütfen aşağıdaki e-posta adresi üzerinden bizimle iletişime geçin:
         </p>
         <p style="text-align: center;">
-            <a href="mailto:neizlesem@gmail.com" style="color: #007AFF;">neizlesem@gmail.com</a>
+            <a href="mailto:furkancetin2308@gmail.com" style="color: #007AFF;">furkancetin2308@gmail.com</a>
         </p>
     </div>
 </body>
